--- a/DiplomWeb/DiplomWeb/DiplomWeb.csproj
+++ b/DiplomWeb/DiplomWeb/DiplomWeb.csproj
@@ -210,6 +210,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ApplicationRolesController.cs" />
     <Compile Include="Controllers\ApplicationUsersController.cs" />
+    <Compile Include="Controllers\HolidaysController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\ProjectsController.cs" />
@@ -292,17 +293,45 @@
     <Compile Include="Migrations\201612101017319_taskofproject.Designer.cs">
       <DependentUpon>201612101017319_taskofproject.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201612101754368_Tasks.cs" />
+    <Compile Include="Migrations\201612101754368_Tasks.Designer.cs">
+      <DependentUpon>201612101754368_Tasks.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612111901234_Status_Task.cs" />
+    <Compile Include="Migrations\201612111901234_Status_Task.Designer.cs">
+      <DependentUpon>201612111901234_Status_Task.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612112025401_Watcher.cs" />
+    <Compile Include="Migrations\201612112025401_Watcher.Designer.cs">
+      <DependentUpon>201612112025401_Watcher.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612212100055_Holidays add.cs" />
+    <Compile Include="Migrations\201612212100055_Holidays add.Designer.cs">
+      <DependentUpon>201612212100055_Holidays add.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612212125005_Added status holidays.cs" />
+    <Compile Include="Migrations\201612212125005_Added status holidays.Designer.cs">
+      <DependentUpon>201612212125005_Added status holidays.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612212216553_Added count day holidays.cs" />
+    <Compile Include="Migrations\201612212216553_Added count day holidays.Designer.cs">
+      <DependentUpon>201612212216553_Added count day holidays.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\FIlesCRM.cs" />
     <Compile Include="Models\Group.cs" />
+    <Compile Include="Models\HolidayStatus.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Priority.cs" />
+    <Compile Include="Models\Holiday.cs" />
     <Compile Include="Models\Project.cs" />
     <Compile Include="Models\RecordVigil.cs" />
     <Compile Include="Models\TaskOfProject.cs" />
+    <Compile Include="Models\TaskStatus.cs" />
     <Compile Include="Models\Vigil.cs" />
+    <Compile Include="Models\VigilGroups.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -313,6 +342,7 @@
     <Content Include="Content\fullcalendar.css" />
     <Content Include="Content\fullcalendar.print.css" />
     <Content Include="Content\styles.css" />
+    <Content Include="Content\tabs.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -325,6 +355,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Scripts\daterangepicker.js" />
+    <Content Include="Scripts\daypilot-all.min.js" />
     <Content Include="Scripts\fullcalendar.js" />
     <Content Include="Scripts\fullcalendar\gcal.js" />
     <Content Include="Scripts\fullcalendar\locale-all.js" />
@@ -348,6 +379,7 @@
     <Content Include="Scripts\moment.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Content\scheduler_8.css" />
     <Content Include="Scripts\scripts.js" />
     <Content Include="Scripts\tinymce.min.js" />
     <Content Include="Scripts\tinymce\jquery.tinymce.min.js" />
@@ -559,11 +591,11 @@
     <Content Include="Views\RecordVigils\ViewCalendar.cshtml" />
     <Content Include="Views\UserVigils\Index.cshtml" />
     <Content Include="Views\UserVigils\Create.cshtml" />
-    <Content Include="Views\UserVigils\Vigils\Create.cshtml" />
-    <Content Include="Views\UserVigils\Vigils\Delete.cshtml" />
-    <Content Include="Views\UserVigils\Vigils\Details.cshtml" />
-    <Content Include="Views\UserVigils\Vigils\Edit.cshtml" />
-    <Content Include="Views\UserVigils\Vigils\Index.cshtml" />
+    <Content Include="Views\Vigils\Create.cshtml" />
+    <Content Include="Views\Vigils\Delete.cshtml" />
+    <Content Include="Views\Vigils\Details.cshtml" />
+    <Content Include="Views\Vigils\Edit.cshtml" />
+    <Content Include="Views\Vigils\Index.cshtml" />
     <Content Include="Views\Manage\Edit.cshtml" />
     <Content Include="Views\Projects\Create.cshtml" />
     <Content Include="Views\Projects\Delete.cshtml" />
@@ -590,6 +622,18 @@
     <Content Include="Views\Projects\Index.cshtml" />
     <Content Include="Views\Projects\MembersProject.cshtml" />
     <Content Include="Views\Projects\Project.cshtml" />
+    <Content Include="Views\Projects\Overview.cshtml" />
+    <Content Include="Views\TaskOfProjects\Tasks.cshtml" />
+    <Content Include="Views\UserVigils\Sheduler.cshtml" />
+    <Content Include="Views\UserVigils\Vigil.cshtml" />
+    <Content Include="Views\Home\Java.cshtml" />
+    <Content Include="Views\Projects\Manager.cshtml" />
+    <Content Include="Views\Holidays\Create.cshtml" />
+    <Content Include="Views\Holidays\Delete.cshtml" />
+    <Content Include="Views\Holidays\Details.cshtml" />
+    <Content Include="Views\Holidays\Edit.cshtml" />
+    <Content Include="Views\Holidays\List.cshtml" />
+    <Content Include="Views\Holidays\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -663,6 +707,24 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201612101017319_taskofproject.resx">
       <DependentUpon>201612101017319_taskofproject.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612101754368_Tasks.resx">
+      <DependentUpon>201612101754368_Tasks.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612111901234_Status_Task.resx">
+      <DependentUpon>201612111901234_Status_Task.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612112025401_Watcher.resx">
+      <DependentUpon>201612112025401_Watcher.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612212100055_Holidays add.resx">
+      <DependentUpon>201612212100055_Holidays add.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612212125005_Added status holidays.resx">
+      <DependentUpon>201612212125005_Added status holidays.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612212216553_Added count day holidays.resx">
+      <DependentUpon>201612212216553_Added count day holidays.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
